--- a/public/style.css
+++ b/public/style.css
@@ -2,8 +2,24 @@
     box-sizing: border-box;
     margin: 0;
     border: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+#messages {
+    list-style: none; 
+    height: 100%;
+    margin: 0;
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem
 }
 
+#messages>li {
+    padding: 1.5ch;
+    background-color: hsl(0, 0%, 25%);
+    border-radius: 10px;
+width: fit-content;
+}
 
 body {
     font-family: Verdana;
@@ -28,7 +44,7 @@ form {
     justify-content: space-between;
     margin-top: auto;
     background-color: hsla(0, 0%, 20%, 1);
-    height: max(10vh, 80px);
+    height: clamp(15vh, 70px, 80px);
     padding: 1rem;
     gap: 1ch
 }
