--- a/public/style.css
+++ b/public/style.css
@@ -11,14 +11,24 @@
     padding: 25px;
     display: flex;
     flex-direction: column;
-    gap: 1rem
+    gap: 1rem;
+    overflow-y: auto;
+
+    
 }
 
 #messages>li {
     padding: 1.5ch;
     background-color: hsl(0, 0%, 25%);
     border-radius: 10px;
-width: fit-content;
+    width: fit-content;
+}
+
+.peer {
+    align-self: flex-start;
+}
+.me {
+    align-self: flex-end;
 }
 
 body {
